[MFLP-99] feat: fix alignment and header for saved info page

--- a/src/styles/MyAccountPage.css
+++ b/src/styles/MyAccountPage.css
@@ -23,11 +23,6 @@
   flex-wrap: wrap;
 }
 
-.my-account-header h1 {
-  font-size: 40px;
-  margin: 0 0 20px 0;
-}
-
 .my-account-details {
   margin-bottom: 1rem;
 }
